fix: Add page aliases for kafka-sink and kafka-source URLs
Fixes 404 errors when accessing:
- /kafka-sink/ (now redirects to /sink/)
- /kafka-source/ (now redirects to /source/)

These URLs may be referenced by external documentation or bookmarks.
The aliases ensure backward compatibility and prevent 404 errors.

Changes:
- Added kafka-sink.adoc alias to modules/ROOT/pages/sink.adoc
- Added kafka-source.adoc alias to modules/ROOT/pages/source.adoc

Testing:
- Built documentation locally with npm run build
- Verified redirect pages are generated correctly in build/site/kafka/5.1/
- Confirmed redirects use proper canonical links and meta refresh tags

--- a/modules/ROOT/pages/sink.adoc
+++ b/modules/ROOT/pages/sink.adoc
@@ -1,5 +1,5 @@
 = Configuring sink connector
-:page-aliases: kafka-connect/sink.adoc
+:page-aliases: kafka-connect/sink.adoc, kafka-sink.adoc
 
 In this chapter we'll discuss how the Sink instance is configured.
 
