--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -2,6 +2,19 @@
 
 This page lists changes to the {product-name}.
 
+== Version 5.1.19
+[cols="1,2", options="header"]
+|===
+| Feature | Details
+
+a|
+label:functionality[]
+label:new[]
+
+Configure Neo4j Java Driver to use provider SLF4J configuration.
+| Logging behaviour of Neo4j Java Driver is now delegated to SLF4J, ensuring the driver follows the configuration of the active SLF4J implementation.
+|===
+
 == Version 5.1.18
 
 [cols="1,2", options="header"]
