fix: adjusted from feeback

--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -47,7 +47,8 @@ Some features, such as constraints and CDC, are only available with Neo4j Enterp
 
 === Kafka Connect compatibility
 
-The connector is designed to be compatible with versions of Apache Kafka Connect 3.4.1+. Including Amazon MSK and Confluent Connect 7.4+ on the Confluent Platform and Cloud.
+The connector is designed to be compatible with versions of Apache Kafka Connect {kafka-connect-version} and later.
+This includes Amazon MSK and Confluent Connect {confluent-connect-version} and later on the Confluent Platform and Cloud.
 
 === Java compatibility
 
