Apply suggestions from code review
Co-authored-by: Nicola Vitucci <nicola.vitucci@gmail.com>

--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -12,15 +12,15 @@ a|
 label:feature[]
 label:new[]
 
-CDC Source connector declare itself as Exactly Once capable.
-| For environments that support link:{https://cwiki.apache.org/confluence/display/KAFKA/KIP-618%3A+Exactly-Once+Support+for+Source+Connectors}[KIP-618: Exactly Once semantics for Source Connectors], CDC source connector will take advantage of this feature without any additional configuration.
+The CDC Source connector declares itself as Exactly Once capable.
+| For environments that support link:{https://cwiki.apache.org/confluence/display/KAFKA/KIP-618%3A+Exactly-Once+Support+for+Source+Connectors}[KIP-618], the CDC source connector will take advantage of this feature without any additional configuration.
 
 a|
 label:feature[]
 label:new[]
 
 New batched CDC sink handlers.
-| New set of CDC sink handlers are introduced to provide better performance when processing CDC events in sink connector.
+| New CDC sink handlers are introduced to provide better performance when processing CDC events in the sink connector.
 These handlers will process messages in batches and apply them into the database in a more efficient way.
 New handlers utilize APOC Core `apoc.cypher.doIt` procedure and Cypher Set & Remove clauses with dynamic labels, and will be preferred over the default handlers based on availability of these features.
 
